--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@
    margin-bottom: 13rem; /* 섹션 간격 (원하는 값으로 조절 가능) */
  }
  
+ 
  h3 {
   margin-bottom: 1.5rem; /* 기본보다 여유 있게 */
 }
@@ -40,7 +41,7 @@
     box-sizing: border-box;
   }
   
-  html, body {
+  html {
     font-family: var(--font-base);
     background-color: var(--color-bg);
     color: var(--color-text);
@@ -49,6 +50,11 @@
     -webkit-tap-highlight-color: transparent;
     padding: 0.5rem; /* 기본 여백 */
   }
+
+ body {
+    padding: 0; /* 기본 여백 */
+  }
+
   p {
     font-size: var(--fz-base);
     margin-bottom: 1rem; /* 기본 문단 간격 */
@@ -144,13 +150,12 @@
   
   /* 인트로 (#intro) */
   #intro {
-    padding: 1rem;
     max-width: 600px;
     text-align: center;
   }
 
   #intro p {
-    font-size: clamp(12px, 3.5vw, 18px);
+    font-size: clamp(12px, 3.8vw, 18px);
     line-height: 1.8; /* 문단 간격 유지 */
   }
 
@@ -318,8 +323,6 @@
     height: 166px;
     background: #ffffff;
     padding: 0.5rem 0;
-    margin-left: -0.5rem;
-    margin-right: -0.5rem;
   }
 
 
