--- a/styles.css
+++ b/styles.css
@@ -244,21 +244,21 @@
     position: fixed;
     top: 0; left: 0;
     width: 100%; height: 100%;
-    background: #35322e80; /* 50% 투명 */
+    background: #ffffffee;
     justify-content: center;
     align-items: center;
     z-index: 1000;
   }
   .lightbox-img {
-    max-width: 90%;
-    max-height: 90%;
+    max-width: 80%;
+    max-height: 80%;
   }
   .lightbox .close {
     position: absolute;
     top: 20px;
     right: 30px;
     font-size: 2rem;
-    color: #F9F6F3;
+    color: #aca59f;
     cursor: pointer;
   }
   .lightbox-controls {
@@ -274,8 +274,8 @@
   }
   
   .lightbox-controls span {
-    font-size: 2rem;              /* 아이콘 크기 */
-    color: #F9F6F3;                 /* 흰색 */
+    font-size: 1.8rem;              /* 아이콘 크기 */
+    color: #aca59f;                 /* 흰색 */
     cursor: pointer;
     user-select: none;
     transition: color 0.2s;
