--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ h3 {
     --font-deco: 'UnifrakturMaguntia', cursive;
   
     /* 폰트 크기 및 간격 */
-    --fz-base: 1.2rem;
+    --fz-base: 1.1rem;
     --fz-heading: 3rem;
     --line-height-base: 1.6;
     --spacing-section: 1rem;
@@ -191,8 +191,9 @@ h3 {
     text-align: center;
   }
 
+
   #intro p {
-    font-size: clamp(12px, 3.8vw, 18px);
+    font-size: clamp(12px, 4vw, 18px);
     line-height: 1.8; /* 문단 간격 유지 */
   }
 
@@ -292,6 +293,10 @@ h3 {
   margin-bottom: 2rem;
 }
 
+#parents p {
+  font-size: 1rem;
+}
+
 /* 부모님 리스트: 좌우 배치 */
 .parents-list {
   display: flex;
@@ -314,7 +319,6 @@ h3 {
 
 .parents-item .caption {
   font-size: 1rem;
-  margin: 0.3rem 0;
 }
   
   .container {
@@ -334,7 +338,7 @@ h3 {
   }
   .info {
     padding: 3vw;
-    font-size: min(4.3vw, 18px);
+    font-size: min(4.2vw, 18px);
     background-color: #ffffff;
     margin-bottom: 10px;
   }
